unpackaged/main/default/objects/Playlist__c/fields/Line_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Category__c</fullName>
    <label>Line Item Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsored In Playlist Media</fullName>
            </value>
            <value>
                <fullName>Sponsored In Playlist Media Algorithmic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>