unpackaged/main/default/objects/Playlist__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Market</description>
    <inlineHelpText>Market</inlineHelpText>
    <label>Market</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Playlists</relationshipLabel>
    <relationshipName>Playlists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>