unpackaged/main/default/objects/Playlist__c/fields/Playlist_Name__c.field-meta.xml
<CustomField>
    <fullName>Playlist_Name__c</fullName>
    <description>Playlist Name</description>
    <inlineHelpText>Playlist Name</inlineHelpText>
    <label>Playlist Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>