unpackaged/main/default/objects/Playlist__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Short description to easily identify the Playlist and will be displayed for Users when selecting the Playlist</description>
    <inlineHelpText>Short description to easily identify the Playlist and will be displayed for Users when selecting the Playlist</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>