unpackaged/main/default/objects/Playlist__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>Unique identifier used for data migration</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier used for data migration</inlineHelpText>
    <label>Unique Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>