unpackaged/main/default/objects/Playlist__c/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <description>Playlist uri to be pushed to Ad Server</description>
    <inlineHelpText>Playlist uri to be pushed to Ad Server</inlineHelpText>
    <label>URI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>